--- a/SimTECH/SimTECH/Pages/Drivers/Dialogs/Import.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Dialogs/Import.razor
@@ -68,7 +68,8 @@
                                            Class="field-md" />
                         </MudTd>
                         <MudTd>
-                            <MudSwitch @bind-Checked="context.Mark"
+                            <MudSwitch T="bool"
+                                       @bind-Checked="context.Mark"
                                        Color="Color.Secondary" />
                         </MudTd>
                     </RowTemplate>
