--- a/SimTECH/SimTECH/Pages/Extra/Index.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Index.razor
@@ -57,7 +57,7 @@
                 <MudPaper Class="pa-4 mud-height-full">
                     <MudText Typo="Typo.h5">Celestials</MudText>
                     <MudDivider />
-                    <MudList>
+                    <MudList T="string">
                         <MudListSubheader>
                             Beware the forsaken ones
                         </MudListSubheader>
