--- a/SimTECH/SimTECH/Pages/Incidents/Dialogs/Import.razor
+++ b/SimTECH/SimTECH/Pages/Incidents/Dialogs/Import.razor
@@ -60,7 +60,8 @@
                             <MudNumericField @bind-Value="context.Odds" Min="0" Class="dense-field" />
                         </MudTd>
                         <MudTd>
-                            <MudSwitch @bind-Checked="context.Penalized"
+                            <MudSwitch T="bool"
+                                       @bind-Checked="context.Penalized"
                                        Color="Color.Secondary" />
                         </MudTd>
                         <MudTd>
