--- a/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerDropper.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerDropper.razor
@@ -1,7 +1,7 @@
 ﻿<MudDropContainer T="EditContract"
                   @ref="@dropzone"
                   Items="@_editableContracts"
-                  ItemIsDisabled="@((contract) => contract.Id != 0)"
+                  ItemDisabled="@((contract) => contract.Id != 0)"
                   ItemsSelector="@((item, dropzone) => $"{item.TeamId}" == dropzone)"
                   ItemDropped="DriverDropped"
                   ApplyDropClassesOnDragStarted="true"
