--- a/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/raceweek/{RaceId:long}"
 
-@using MudExtensions.Enums
+@using MudExtensions
 @using SimTECH.Pages.RaceWeek.Components
 @using SimTECH.Pages.RaceWeek.Tabs
 
