--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -1,4 +1,4 @@
-﻿@using MudExtensions.Enums
+﻿@using MudExtensions
 @using SimTECH.Pages.RaceWeek.Components
 
 @inject IRaceWeekService _raceWeekService
