--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/overview/{SeasonId:long}"
 @page "/overview/{SeasonId:long}/{TabIndex:int}"
 
-@using MudExtensions.Enums
+@using MudExtensions
 @using SimTECH.Pages.Seasons.Dialogs
 @using SimTECH.Pages.Seasons.Overview.Development
 @using SimTECH.Pages.Seasons.Overview.Dialogs
