--- a/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
@@ -26,7 +26,7 @@
                                        Variant="Variant.Outlined"
                                        Class="field-lg">
                         <ItemTemplate>
-                            <MudCheckBox Checked="@context.IsSelected" Color="Color.Secondary" />
+                            <MudCheckBox Value="@context.IsSelected" Color="Color.Secondary" />
                             <MudText>@context.Value.FullName</MudText>
                             <MudSpacer />
                             <CountryFlag Code="@context.Value.Country" Size="ElementSize.Small" />
