--- a/SimTECH/SimTECH/Pages/Traits/Assignment/Dialogs/AssignmentResult.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Assignment/Dialogs/AssignmentResult.razor
@@ -56,10 +56,7 @@
     [Parameter]
     public List<EntrantAssignee> Entrants { get; set; } = new();
 
-    private void Submit()
-    {
-        AssignmentDialog?.Close(DialogResult.Ok(true));
-    }
+    private void Submit() => AssignmentDialog?.Close(DialogResult.Ok(true));
 
     private void Cancel() => AssignmentDialog?.Cancel();
 }
