--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -6,9 +6,10 @@
 @inherits LayoutComponentBase
 
 <MudThemeProvider @bind-IsDarkMode="IsDarkTheme" Theme="@Theme" />
+<MudPopoverProvider />
 <MudDialogProvider MaxWidth="MaxWidth.Large"
                    CloseButton="true"
-                   DisableBackdropClick="true"
+                   BackdropClick="false"
                    Position="DialogPosition.Center" />
 <MudSnackbarProvider />
 
