--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
@@ -34,8 +34,8 @@
                             {
                                 <MudStack Spacing="1">
                                     <MudText Typo="Typo.subtitle1">Class</MudText>
-                                    <MudChipSet SelectedChipChanged="RaceClassChipChanged"
-                                                Mandatory="true"
+                                    <MudChipSet T="long" SelectedValueChanged="RaceClassChipChanged"
+                                                SelectionMode="SelectionMode.SingleSelection"
                                                 Class="d-flex flex-row">
                                         <MudChip Color="Color.Dark" Value="0L" Default="true" Class="flex-1">All</MudChip>
                                         @foreach (var raceClass in RaceClasses)
@@ -50,8 +50,8 @@
                                 <MudTooltip Text="For whom the development is run">
                                     <MudText Typo="Typo.subtitle1">Entrant</MudText>
                                 </MudTooltip>
-                                <MudChipSet SelectedChipChanged="EntrantChipChanged"
-                                            Mandatory="true"
+                                <MudChipSet T="Entrant" SelectedValueChanged="EntrantChipChanged"
+                                            SelectionMode="SelectionMode.SingleSelection"
                                             Class="d-flex flex-row flex-stretch-items">
                                     <MudChip Color="Color.Primary" Value="Entrant.Driver" Default="true">Driver</MudChip>
                                     <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
@@ -63,7 +63,7 @@
                                 <MudTooltip Text="Which aspect is going to be developed">
                                     <MudText Typo="Typo.subtitle1">Target</MudText>
                                 </MudTooltip>
-                                <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true" Class="d-flex flex-row">
+                                <MudChipSet T="Aspect" SelectedValueChanged="TargetChipChanged" SelectionMode="SelectionMode.SingleSelection" Class="d-flex flex-row">
                                     <MudChip Color="Color.Secondary"
                                              Value="Aspect.Reliability"
                                              Default="true"
@@ -111,7 +111,7 @@
                                 <MudTooltip Text="How the development ranges are determined">
                                     <MudText Typo="Typo.subtitle1">Type</MudText>
                                 </MudTooltip>
-                                <MudChipSet SelectedChipChanged="TypeChipChanged" Mandatory="true" Class="d-flex flex-row">
+                                <MudChipSet T="Quantifier" SelectedValueChanged="TypeChipChanged" SelectionMode="SelectionMode.SingleSelection" Class="d-flex flex-row">
                                     <MudChip Color="Color.Tertiary" Value="Quantifier.Set" Default="true" Class="flex-1">Set</MudChip>
                                     <MudChip Color="Color.Tertiary" Value="Quantifier.Range" Class="flex-1">Range</MudChip>
                                     <MudChip Color="Color.Tertiary" Value="Quantifier.Direct" Class="flex-1">Direct</MudChip>
@@ -137,7 +137,7 @@
                         <MudText Class="mt-4 mb-2">
                             For @(DevelopModel.ActiveEntrant.ToString().ToLower()) and @(DevelopModel.ActiveAspect.GetReadableAspect().ToLower()) show the:
                         </MudText>
-                        <MudButtonGroup VerticalAlign="true"
+                        <MudButtonGroup Vertical="true"
                                         Variant="Variant.Outlined"
                                         Color="Color.Secondary"
                                         Class="mud-width-full">
