--- a/SimTECH/SimTECH/Pages/Teams/Dialogs/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Teams/Dialogs/TeamEditor.razor
@@ -13,7 +13,8 @@
 
                         <MudText Typo="Typo.subtitle1">Toggles</MudText>
                         <MudDivider />
-                        <MudSwitchM3 @bind-Checked="Model.Mark"
+                        <MudSwitchM3 T="bool"
+                                     @bind-Checked="Model.Mark"
                                      Label="Mark"
                                      Color="Color.Secondary"
                                      ThumbIcon="@Icons.Material.Filled.Done"
@@ -22,7 +23,10 @@
                 </MudPaper>
                 <MudPaper Elevation="10" Class="pa-2 mud-height-full">
                     <MudText Typo="Typo.subtitle1">Traits</MudText>
-                    <MudChipSet @bind-SelectedValues="selectedTraits" MultiSelection="true" Filter="true">
+                    <MudChipSet T="long"
+                                @bind-SelectedValues="selectedTraits"
+                                SelectionMode="SelectionMode.MultiSelection"
+                                CheckMark="true">
                         @foreach (var trait in selectableTraits)
                         {
                             <MudChip Text="@trait.Name" Value="@trait.Id" Color="Color.Primary"></MudChip>
@@ -39,22 +43,28 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] protected MudDialogInstance? TeamDialog { get; set; }
+    [CascadingParameter]
+    protected MudDialogInstance? TeamDialog { get; set; }
 
-    [Parameter] public Team? Team { get; set; }
-    [Parameter] public List<Trait> Traits { get; set; } = new();
+    [Parameter]
+    public Team? Team { get; set; }
 
-    private EditTeamModel Model;
-    private List<Trait> selectableTraits;
-    private ICollection<object>? selectedTraits { get; set; }
+    [Parameter]
+    public List<Trait> Traits { get; set; } = new();
+
+    private EditTeamModel Model { get; set; }
+
+    private List<Trait> selectableTraits { get; set; }
+
+    private IReadOnlyCollection<long> selectedTraits { get; set; }
 
     protected override void OnInitialized()
     {
         Model = new EditTeamModel(Team);
 
-        var teamTraitIds = Model.TeamTraits.Select(e => e.TraitId).ToList();
-        selectableTraits = Traits.Where(e => e.State == State.Active || teamTraitIds.Contains(e.Id)).ToList();
-        selectedTraits = Model.TeamTraits.Select(e => e.TraitId).Cast<object>().ToList();
+        selectedTraits = Model.TeamTraits.Select(e => e.TraitId).ToList();
+
+        selectableTraits = Traits.Where(e => e.State == State.Active || selectedTraits.Contains(e.Id)).ToList();
     }
 
     private void Submit()
@@ -62,7 +72,6 @@
         if (selectedTraits != null)
         {
             Model.TeamTraits = selectedTraits
-                .Cast<long>()
                 .Select(e => new EditTeamTraitModel { TeamId = Model.Id, TraitId = e })
                 .ToList();
         }
